# oneapi-antispoofing

./: CMakeLists.txt  README.md
content/: fraud-video.h265  real-video.h265
src/: antispoofing.cpp  util.h
